--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-htmlview",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "description": "A component which renders HTML content as native views",
   "main": "index.js",
   "scripts": {
@@ -19,11 +19,11 @@
     "eslint-plugin-react": "^7.1.0",
     "jest": "^19.0.2",
     "prettier": "^1.5.2",
-    "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.12",
-    "react-dom": "16.0.0-alpha.12",
-    "react-native": "0.46.3",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native": "^0.62.2",
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "preset": "react-native"
